--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
     <section class="hero-home">
         <div class="container hero-container">
             <div class="hero-texto">
-                <h1>Sabores que brotam da terra.</h1>
-                <p>Uma experiência gastronômica vernacular que celebra a biodiversidade brasileira e o respeito ao tempo da natureza.</p>
+                <h1>Raíz Viva: Sabores para Viver Bem</h1>
+                <p>Cada refeição é um gesto de cuidado, porque comer não deve ser um risco, mas um refúgio.</p>
+                <p><strong>Raíz Viva:</strong> Comida segura, consciente e acolhedora para quem vive com restrições ou busca uma alimentação verdadeiramente saudável!</p>
+                <p><em>Entre. Sente-se à vontade. Você está em casa!</em></p>
                 <a href="/pages/menu.html" class="btn-primario">Ver Cardápio</a>
             </div>
             <div class="hero-imagem">
@@ -97,20 +99,20 @@
 
                 <!-- Card Parceiros -->
                 <article class="card-home">
-                    <img src="img/parceiros.jpg" alt="Nossos Parceiros">
+                    <img src="/assets/images/jointVenture_small.webp" alt="Nossos Parceiros">
                     <div class="card-home-content">
                         <h3>Parceiros</h3>
-                        <p>Os produtores e artesãos que fazem tudo acontecer.</p>
+                        <p>Os produtores e as academias que fazem tudo acontecer.</p>
                         <a href="/pages/partners.html" class="btn-link">Ver Parceiros →</a>
                     </div>
                 </article>
 
                 <!-- Card Endereço -->
                 <article class="card-home">
-                    <img src="img/endereco.jpg" alt="Onde Estamos">
+                    <img src="/assets/images/ondeestamos_small.webp" alt="Onde Estamos">
                     <div class="card-home-content">
                         <h3>Onde Estamos</h3>
-                        <p>Venha nos visitar no coração da Vila Madalena.</p>
+                        <p>Do coração de Campo Grande - RJ direto para seu prato</p>
                         <a href="/pages/contacts.html" class="btn-link">Como Chegar →</a>
                     </div>
                 </article>
