--- a/pages/about.html
+++ b/pages/about.html
@@ -61,9 +61,21 @@
         <!-- Bloco 1: Filosofia -->
         <article class="card-bento card-texto card-filosofia">
           <div class="conteudo-scrollavel">
-            <h2>Do Campo à Mesa</h2>
+            <h2>O Acolhimento à Mesa</h2>
             <p>
-              Nossa jornada começa no solo. Cultivamos parcerias com produtores que entendem que o tempo da natureza é sagrado. Cada ingrediente que chega à nossa cozinha carrega a história de quem o plantou. Acreditamos que comida de verdade vem de raízes bem cuidadas, onde o respeito pelo ciclo natural se transforma em sabor puro e nutritivo. Trabalhamos apenas com produtores locais que compartilham nossa visão de agricultura regenerativa, garantindo que cada folha, cada fruto, cada raiz tenha o tempo necessário para desenvolver seu potencial máximo de sabor e nutrientes.
+              Para muitas pessoas, sentar-se à mesa não é um gesto simples. É um momento que pode vir acompanhado de dúvidas, receios e a necessidade de adaptações. Um detalhe no preparo ou uma informação que falta transformam o prazer de comer em preocupação.
+            </p>
+            <p>
+                A Raiz Viva existe para transformar essa experiência. Aqui, comer é sinônimo de acolhimento e segurança. É o lugar onde a comida respeita o corpo, a saúde e as escolhas individuais de cada um.
+            </p> 
+            <p>
+              Acreditamos que a comida de verdade nutre mais do que o físico: ela restaura a confiança, a tranquilidade e o bem-estar. Nosso propósito é devolver o prazer de sentar à mesa sem medo, sem culpa e sem complicações. 
+            </p>
+            <p>
+              Da raiz ao prato, tudo importa: a origem, o preparo cuidadoso, a informação clara e, sobretudo, o respeito por quem vai receber essa refeição.
+            </p> 
+            <p>
+              Raiz Viva é um espaço onde a comida cuida, inclui e conecta. Onde cada refeição é um gesto de atenção. Onde comer bem é, acima de tudo, um ato de cuidado.
             </p>
           </div>
         </article>
@@ -76,12 +88,21 @@
         <!-- Bloco 3: História Texto -->
         <article class="card-bento card-texto card-historia-txt">
           <div class="conteudo-scrollavel">
-            <h2>Nossa História</h2>
+            <h2>Nascemos do Cuidado</h2>
             <p>
-              O Raíz Viva nasceu do desejo de resgatar sabores esquecidos e técnicas ancestrais, trazendo o bioma brasileiro para o centro do prato. Em 2018, começamos como um pequeno projeto familiar na região do Cerrado, onde aprendemos com comunidades tradicionais sobre plantas nativas e seus usos culinários. Hoje, mantemos essa conexão com as origens enquanto inovamos com técnicas modernas que respeitam a sazonalidade e a biodiversidade brasileira.
+              Nossa história começa com uma observação simples e profunda: a necessidade de valorizar a saúde e o momento da refeição com verdadeiro cuidado.
             </p>
             <p>
-              Tudo começou em uma pequena cozinha de barro, onde o fogo de chão era o coração da casa. As receitas eram passadas de geração em geração, e cada ingrediente tinha seu propósito além do sabor. Nossos fundadores, Maria e João, aprenderam com avós indígenas e quilombolas que a comida é medicina, é conexão, é memória. Dessa sabedoria ancestral nasceu o Raíz Viva, um espaço onde tradição e inovação se encontram para criar experiências gastronômicas que alimentam corpo e alma.
+              Nascemos da vontade de criar um refúgio onde o essencial fosse prioridade. Pensamos em quem convive com restrições alimentares, em quem busca equilíbrio, em quem deseja simplesmente se sentir seguro ao comer — e também em quem anseia por voltar ao sabor puro e nutritivo.
+            </p>
+            <p>
+              <strong><em>Por isso, nada aqui é feito às pressas.</em></strong> Escolhemos ingredientes naturais com consciência, honramos os processos da terra e o trabalho dos produtores locais. Cada combinação em nossos pratos carrega uma intenção: a de nutrir e acolher.
+            </p>
+            <p>
+              Criamos mais que um cardápio; criamos uma experiência que honra a jornada de cada pessoa. Porque sabemos que por trás de cada escolha alimentar existe uma história, um corpo e uma vida que merecem respeito.
+            </p>
+            <p>
+              <em>Essa é a nossa raiz. Viva, consciente e dedicada a você.</em>
             </p>
           </div>
         </article>
