--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -86,11 +86,11 @@
                 <div class="info-corpo">
                     <div class="info-linha">
                         <span class="icone">📍</span>
-                        <p>Rua das Flores, 321 - Jardim Botânico, São Paulo</p>
+                        <p>Estrada da Posse, 999 - Campo Grade, Rio de Janeiro - RJ</p>
                     </div>
                     <div class="info-linha">
                         <span class="icone">📞</span>
-                        <p>(11) 98665-8311</p>
+                        <p>(21) 999.999.999</p>
                     </div>
                     <div class="info-linha">
                         <span class="icone">✉️</span>
@@ -102,9 +102,9 @@
                     </div>
                 </div>
                 <div class="redes-sociais-contato">
-                    <a href="#" class="social-icon">f</a>
-                    <a href="#" class="social-icon">ig</a>
-                    <a href="#" class="social-icon">w</a>
+                    <a href="#" class="social-icon">Ig</a>
+                    <a href="#" class="social-icon">99</a>
+                    <a href="#" class="social-icon">Ifood</a>
                 </div>
             </article>
 
@@ -112,7 +112,7 @@
             <article class="card-bento card-mapa">
                 <div class="mapa-container">
                     <iframe 
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.196833529431!2d-46.65941672458377!3d-23.561367361792126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59c8da0aa315%3A0xd59f9431f2c9776a!2sAv.%20Paulista%2C%20S%C3%A3o%20Paulo%20-%20SP!5e0!3m2!1spt-BR!2sbr!4v1649197308106!5m2!1spt-BR!2sbr"
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3675.7915514063466!2d-43.55726258128214!3d-22.88415739442336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1768969220197!5m2!1spt-BR!2sbr"
                         width="100%" 
                         height="100%" 
                         style="border:0;" 
