--- a/pages/partners.html
+++ b/pages/partners.html
@@ -59,18 +59,18 @@
             <!-- Card de Apresentação com Scroll Interno -->
             <article class="card-bento card-apresentacao">
               <div class="scroll-interno">
-                <h2>Nossa Rede de Valor</h2>
-                <p>Acreditamos que a gastronomia de verdade nasce da colaboração. Nossos parceiros não são apenas fornecedores, são guardiões da terra, artesãos do sabor e famílias que dedicam suas vidas a produzir o melhor que o Brasil tem a oferecer.</p>
-                <p>Cada ingrediente que chega à nossa mesa carrega uma história de respeito ao meio ambiente e desenvolvimento social local. Juntos, construímos uma cadeia produtiva justa, transparente e profundamente conectada com nossas raízes.</p>
-                <p>Conheça abaixo os protagonistas que tornam o Raíz Viva uma realidade diária.</p>
+                <h2>Parcerias com Propósito: Juntos Cuidamos Mais</h2>
+                <p>Na Raiz Viva, sabemos que construir um futuro mais saudável não se faz sozinho. Por isso, cultivamos parcerias que vão além de acordos comerciais — são laços baseados em propósito, confiança e impacto coletivo. Com cada parceiro, aprendemos, crescemos e ampliamos nossa capacidade de cuidar da saúde das pessoas e do meio ambiente, fortalecendo a comunidade e garantindo que o nosso cuidado chegue mais longe.</p>
+                <p>Seja com quem planta nossos ingredientes, com quem valida nossa nutrição ou com quem se junta para oferecer bem-estar completo, cada parceria é um passo firme em direção a um ecossistema alimentar mais justo, consciente e humano.</p>
+                <p><em>Porque acreditamos que, quando caminhamos juntos, o impacto é maior, as raízes são mais profundas e o futuro, mais saudável.</em></p>
+                <p><strong>Conheça abaixo os protagonistas que tornam o Raíz Viva uma realidade diária.</strong></p>
               </div>
-              <a href="#lista-parceiros" class="btn-bento">Conhecer Parceiros</a>
             </article>
 
             <!-- Card de Imagem Destaque -->
             <article class="card-bento card-imagem-destaque">
               <figure class="recorte-parceiro">
-                <img src="img/parceiros-hero.jpg" alt="Mãos dadas com a terra - rede de parceiros Raíz Viva">
+                <img src="/assets/images/jointVenture_small.webp" alt="Mãos dadas com a terra - rede de parceiros Raíz Viva">
               </figure>
             </article>
           </div>
@@ -82,48 +82,48 @@
               <!-- Slide 1: Exemplo de Parceiro -->
               <div class="slide-parceiro ativo">
                 <div class="slide-img">
-                  <img src="img/parceiro-1.jpg" alt="Fazenda Santa Luzia - produção de laticínios artesanais">
+                  <img src="/assets/images/cooperativas_small.webp" alt="Produtores locais">
                 </div>
                 <div class="slide-info">
-                  <h3>Fazenda Santa Luzia</h3>
-                  <p>Especialistas em laticínios artesanais e queijos premiados, a Fazenda Santa Luzia utiliza técnicas ancestrais de maturação, garantindo sabores únicos que são a base de nossas entradas e sobremesas.</p>
-                  <p class="slide-local">Local: Serra da Mantiqueira, MG</p>
+                  <h3>Produtores Locais</h3>
+                  <p>Redução de custos e alimentos frescos. Garantia de qualidade e rastreabilidade. Cadastramento dos produtores para controle de fornecedores.</p>
+                  <p class="slide-local">Local: Rio de Janeiro</p>
                 </div>
               </div>
 
               <!-- Slide 2: Exemplo de Parceiro -->
               <div class="slide-parceiro">
                 <div class="slide-img">
-                  <img src="img/parceiro-2.jpg" alt="Cooperativa Terra Viva - agricultura regenerativa">
+                  <img src="/assets/images/nutriVenture_small.webp" alt="NutriVenture logo">
                 </div>
                 <div class="slide-info">
-                  <h3>Cooperativa Terra Viva</h3>
-                  <p>Nossa principal fonte de hortaliças e PANCs. Localizada no cinturão verde, a cooperativa reúne 15 famílias que praticam a agricultura regenerativa sem o uso de agrotóxicos.</p>
-                  <p class="slide-local">Local: Cinturão Verde, SP</p>
+                  <h3>NutriVenture</h3>
+                  <p>Validação técnica. Consultoria e assessoria especializadas em assuntos regulatórios e segurança dos alimentos que trabalham em conformidade com a ANVISA e o Ministério da Agricultura e Pecuária (MAPA). Parceria com empresa de nutrição qualificada.</p>
+                  <p class="slide-local">Local: Rio de Janeiro - RJ</p>
                 </div>
               </div>
 
               <!-- Slide 3: Exemplo de Parceiro -->
               <div class="slide-parceiro">
                 <div class="slide-img">
-                  <img src="img/parceiro-3.jpg" alt="Associação dos Agricultores Familiares">
+                  <img src="/assets/images/verdeNatural_small.webp" alt="Loja Verde &  Natural logo">
                 </div>
                 <div class="slide-info">
-                  <h3>Associação dos Agricultores Familiares</h3>
-                  <p>Fornecedores de frutas tropicais e temperos frescos, trabalhando com mais de 50 famílias na região para promover a agricultura familiar sustentável.</p>
-                  <p class="slide-local">Local: Vale do Ribeira, SP/PR</p>
+                  <h3>Loja Verde &  Natural</h3>
+                  <p>Clientes da Verde & Natural ganham 10% de desconto na primeira compra. Essa parceria seria para atração de clientes que já tem interesse em produtos naturais. Clientes da loja ganham desconto no Raiz Viva e vice-versa.</p>
+                  <p class="slide-local">Local: Campo Grande, Rio de Janeiro - RJ</p>
                 </div>
               </div>
 
               <!-- Slide 4: Exemplo de Parceiro -->
               <div class="slide-parceiro">
                 <div class="slide-img">
-                  <img src="img/parceiro-4.jpg" alt="Pesca Artesanal Sustentável">
+                  <img src="/assets/images/fitventure_small.webp" alt="Academia Fit Venture logo">
                 </div>
                 <div class="slide-info">
-                  <h3>Pesca Artesanal Sustentável</h3>
-                  <p>Comunidade de pescadores que pratica a pesca artesanal com técnicas tradicionais e respeito aos períodos de defeso, garantindo a renovação das espécies marinhas.</p>
-                  <p class="slide-local">Local: Litoral Norte, SP</p>
+                  <h3>Academia Fit Venture</h3>
+                  <p>Público que busca conveniência e alimentação para complementar o treino, o que garante vendas recorrentes para o Raiz Viva. Clientes da academia ganham desconto no Raiz Viva e vice-versa + Divulgação mútua. Plano especial: Treino + plano de alimentação.</p>
+                  <p class="slide-local">Local: Campo Grande, Rio de Janeiro - RJ</p>
                 </div>
               </div>
 
